--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,477 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media only screen and (max-width: 600px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  /* header = navbar*/
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: height 10vh;
+    background-color: rgb(255, 252, 0);
+    font-size: 1.8rem;
+    padding: 1rem;
+    width: 100%;
+  }
+
+  .header-dashboard-button {
+    background: white;
+    cursor: pointer;
+    border-radius: 3rem;
+    width: 10rem;
+    padding: 0.5rem 0;
+    font-size: 1.5rem;
+  }
+
+  /* dashboard*/
+  .dashboard {
+    background-image: url("imgs/gradient.jpg");
+  }
+  .custom-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(255, 252, 0);
+    min-height: 10vh;
+  }
+
+  .custom-header button {
+    background: none;
+    outline: none;
+    border: none;
+  }
+
+  .custom-header img {
+    margin-left: 1rem;
+    height: 3rem;
+    width: 3rem;
+    justify-content: flex-start;
+  }
+
+  .custom-header h1 {
+    margin-right: 50%;
+  }
+
+  .dashboard-title {
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 3rem;
+  }
+
+  form {
+    max-width: 500px;
+    margin: auto;
+    width: 90%;
+    border: black 2px solid;
+    padding: 2rem;
+    border-radius: 1rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+  }
+  label {
+    display: block;
+    padding: 1rem 0.5rem;
+    font-size: 2rem;
+  }
+
+  input,
+  textarea {
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 1rem;
+    outline: none;
+  }
+
+  .submit-button {
+    border: 0;
+    background-color: rgb(255, 252, 0);
+    padding: 1rem 0.5rem;
+    border-radius: 5rem;
+    margin: 1rem 0;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .submit-button:hover {
+    border: 2px solid rgb(255, 252, 0);
+    font-size: 2rem;
+  }
+
+  /* home */
+
+  .home_main {
+    color: red;
+    background-image: url("imgs/home.jpg");
+    background-size: contain;
+  }
+
+  .hero-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .home-buttons {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 20rem;
+  }
+
+  .individual-button {
+    margin: 3rem 0;
+    border-radius: 3rem;
+    background-color: rgb(255, 252, 0);
+    padding: 1.2rem;
+  }
+
+  .individual-button a {
+    text-decoration: none;
+    color: rgb(34, 31, 32);
+  }
+  /* project */
+  .project-title {
+    text-align: center;
+    margin: 3rem 0;
+    font-size: 3rem;
+  }
+  .project_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    margin-bottom: 3rem;
+    border-radius: 1.5rem;
+  }
+  .project_description {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 2rem;
+  }
+
+  .footer {
+    display: block;
+    min-height: 10vh;
+    text-align: center;
+    padding: 1rem 0;
+  }
+
+  .social-icons {
+    display: inline-block;
+    margin: 1.5rem 0;
+    margin-left: 4rem;
+  }
+
+  /*end of media query */
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+body {
+  color: rgb(34, 31, 32);
+}
+
+/* header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 12vh;
+  min-height: 10vh;
+  background-color: rgb(255, 252, 0);
+  font-size: 2rem;
+  padding: 1rem;
+}
+
+.header-dashboard-button {
+  background: white;
+  cursor: pointer;
+  border-radius: 3rem;
+  width: 20rem;
+  padding: 1rem 0;
+  font-size: 2rem;
+}
+
+/*Custom Header Styling*/
+.custom-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(255, 252, 0);
+  min-height: 10vh;
+}
+
+.custom-header button {
+  background: none;
+  outline: none;
+  border: none;
+}
+
+.custom-header img {
+  margin-left: 1rem;
+  height: 3rem;
+  width: 3rem;
+  justify-content: flex-start;
+}
+
+.custom-header h1 {
+  margin-right: 50%;
+}
+
+/* dashboard  - takes you nowhere*/
+.dashboard {
+  background-image: linear-gradient(to right, #ffffff, #fffc00);
+  background-size: cover;
+  height: 100vh;
+}
+.dashboard-title {
+  text-align: center;
+  margin: 2rem 0;
+  font-size: 4rem;
+}
+
+.dashboard_text {
+  text-align: center;
+  font-size: 3rem;
+  margin: 1rem;
+}
+
+form {
+  max-width: 500px;
+  margin: auto;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border: black 2px solid;
+  padding: 2rem;
+  border-radius: 1rem;
+}
+label {
+  display: block;
+  padding: 1rem 0.5rem;
+  font-size: 2.5rem;
+}
+
+input,
+textarea {
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  outline: none;
+}
+
+.submit-button {
+  border: 0;
+  background-color: rgb(255, 252, 0);
+  padding: 1rem 0.5rem;
+  border-radius: 5rem;
+  margin: 1rem 0;
+  cursor: pointer;
+  width: 100%;
+  outline: none;
+}
+
+.submit-button:hover {
+  border: 2px solid rgb(255, 252, 0);
+  font-size: 2rem;
+}
+
+/* home */
+.home {
+  background-image: url("imgs/home.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+.typewritter-effect {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  margin: 3rem;
+  font-size: 3.5rem;
+  font-weight: 800;
+}
+
+.home-buttons {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 20rem;
+}
+
+.individual-button {
+  margin: 3rem 0;
+  border-radius: 3rem;
+  background-color: rgb(255, 252, 0);
+  padding: 1.2rem;
+  font-size: 2rem;
+}
+
+.individual-button a {
+  text-decoration: none;
+  color: rgb(34, 31, 32);
+  display: block;
+}
+
+/* project */
+.oxymusic_project {
+  background-image: linear-gradient(to right, #ffffff, #fffc00);
+}
+.project-title {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: 4rem;
+}
+.project_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-bottom: 3rem;
+  border-radius: 1.5rem;
+}
+.project_description {
+  text-align: center;
+  font-size: 2.5rem;
+  padding: 2rem;
+}
+
+.project_description a {
+  text-decoration: none;
+}
+
+/* freelance projects */
+.project {
+  background-image: linear-gradient(to right, #ffffff, #fffc00);
+}
+
+.project__h1 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 2rem;
+}
+
+.project_card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 5px;
+}
+.projectname {
+  text-align: center;
+  margin: 2rem;
+  font-size: 3rem;
+}
+.project_link {
+  border: 0;
+  background-color: rgb(255, 252, 0);
+  padding: 1rem 0.5rem;
+  border-radius: 5rem;
+  margin: 1rem 0;
+  cursor: pointer;
+  width: 100%;
+  border: 1.5px solid white;
+  outline: none;
+  font-size: 2rem;
+}
+
+.visit_site {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 2rem;
+}
+.project_thumbnail {
+  border-radius: 0 0 0 0;
+  width: 100%;
+  height: auto;
+}
+
+/*About */
+.about {
+  background-image: linear-gradient(to right, #ffffff, #fffc00);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+.about_me_img {
+  width: 30rem;
+  height: 30rem;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem;
+}
+
+.about_me_h1 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 1rem;
+  color: black;
+}
+.about_me_txt {
+  text-align: center;
+  font-size: 2.3rem;
+  margin: 1rem;
+  color: black;
+}
+
+/*footer */
+.footer {
+  background-color: rgb(255, 252, 0);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 10rem;
+  padding: 1rem;
+}
+.footer__heading {
+  font-size: 2.2rem;
+}
+.footer__name {
+  font-size: 2.2rem;
+}
+.footer__declaration {
+  font-size: 2.2rem;
+}
+.footer__icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-icons {
+  height: 3rem;
+  margin: 3rem;
+  transition: 250ms;
+}
+.social-icons:hover {
+  transform: translateY(-4px);
 }
