--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1029,7 +1029,7 @@ textarea {
     height: 4rem;
     border-radius: 2rem;
     cursor: pointer;
-    margin-left: 25%;
+    margin-left: 20%;
   }
 
   .freelance_project_link {
@@ -1053,6 +1053,7 @@ textarea {
   .about {
     background-image: linear-gradient(to right, #ffffff, #fffc00);
     width: 100%;
+    height: 120vh;
   }
   .about_me_img {
     width: 20rem;
