--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -788,9 +788,6 @@ textarea {
     justify-content: space-between;
     background-color: rgb(255, 252, 0);
     min-height: 10vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 
   .custom-header button {
@@ -803,11 +800,11 @@ textarea {
     margin-left: 1rem;
     height: 3rem;
     width: 3rem;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
   }
 
   .custom-header h1 {
-    margin-right: 35%;
+    margin-right: 5%;
   }
 
   /* dashboard  - takes you nowhere*/
